Hotfix: css updates to fix gap on megamenu and searchbox active state

--- a/src/styles/components/_navMenu.scss
+++ b/src/styles/components/_navMenu.scss
@@ -260,7 +260,7 @@
 	  		}
 
 	  		@include min-screen(1025px) {
-	  			top: 43.5px;
+	  			top: 42px;
 	  		}
 	  	}
 
